# Red-Pegasus

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
shaders/: shader.wgsl
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
